--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
         <button class="btn btn-secondary btn-sm" id="btnLogoutGuru">Logout</button>
       </div>
       <div class="info-box">
-        Ujian dan bank soal disimpan di Firestore per kode ujian dan akun guru.
+        Ujian dan bank soal disimpan di Firestore per kode ujian. Guru lain tidak dapat menimpa ujian guru ini.
       </div>
     </div>
 
@@ -573,10 +573,7 @@
       adminUserInput.value = "";
       adminPassInput.value = "";
       showSectionGuru();
-      // soalList dikosongkan supaya tidak bawa soal guru lain
-      soalList = [];
       renderTabelSoal();
-      resetFormSoal();
       loadExamSettingsFromStorage();
       loadHeaderSubtitleFromStorage();
       loadKopFromStorage();
@@ -599,10 +596,6 @@
   auth.onAuthStateChanged(user => {
     if (user) {
       adminInfoText.textContent = "Login sebagai: " + (user.email || "(tanpa email)");
-      // Saat guru berganti, kosongkan daftar soal supaya tidak campur
-      soalList = [];
-      renderTabelSoal();
-      resetFormSoal();
     } else {
       adminInfoText.textContent = "Belum login.";
     }
@@ -648,7 +641,6 @@
     alert("Pengaturan ujian disimpan di browser. Klik 'Simpan Ujian + Soal ke Database' untuk mengirim ke Firestore.");
   });
 
-  // SIMPAN UJIAN + SOAL KE DATABASE (per guru)
   btnSaveExamDb.addEventListener("click", async () => {
     const { name, code, duration } = getExamSettings();
     if (!name || !code) {
@@ -666,12 +658,9 @@
       duration,
       soalList,
       ownerUid: user.uid,
-      ownerEmail: user.email || "",
-      teacherId: user.uid,          // untuk rules baru
-      teacherEmail: user.email || ""
+      ownerEmail: user.email || ""
     };
     try {
-      // doc ID = kode ujian (unik per ujian)
       await db.collection("exams").doc(code).set(data);
       alert("Ujian & bank soal berhasil disimpan ke Firestore dengan kode: " + code);
     } catch (e) {
@@ -680,43 +669,29 @@
     }
   });
 
-  // AMBIL UJIAN DARI DATABASE (hanya ujian milik guru login)
   btnLoadExamDb.addEventListener("click", async () => {
     const code = examCodeInput.value.trim();
-    const user = auth.currentUser;
     if (!code) {
       alert("Isi kode ujian terlebih dahulu.");
       return;
     }
-    if (!user) {
-      alert("Guru belum login.");
-      return;
-    }
     try {
-      const docRef = db.collection("exams").doc(code);
-      const docSnap = await docRef.get();
+      const docSnap = await db.collection("exams").doc(code).get();
       if (!docSnap.exists) {
         alert("Ujian dengan kode tersebut tidak ditemukan.");
         return;
       }
       const data = docSnap.data();
-
-      // Cek kepemilikan di sisi client, untuk memperjelas bagi guru
-      if (data.teacherId && data.teacherId !== user.uid) {
-        alert("Kode ujian ini dimiliki guru lain. Silakan gunakan kode ujian milik akun Anda.");
-        return;
-      }
-
       examNameInput.value = data.name || "";
       examDurationInput.value = data.duration || 60;
       examNameViewSiswa.textContent = data.name || "";
       examDurationViewSiswa.textContent = data.duration || 0;
       soalList = normalizeSoalList(data.soalList || []);
       renderTabelSoal();
-      alert("Ujian & bank soal milik akun ini berhasil dimuat dari Firestore.");
+      alert("Ujian & bank soal berhasil dimuat dari Firestore.");
     } catch (e) {
       console.error(e);
-      alert("Gagal mengambil ujian dari Firestore. Periksa rules atau koneksi.");
+      alert("Gagal mengambil dari Firestore.");
     }
   });
 
@@ -971,9 +946,8 @@
       examNameViewSiswa.textContent = data.name || "Ujian";
       examDurationViewSiswa.textContent = data.duration || 0;
 
-      // simpan info untuk hasil
       currentExamCodeForResult = kode;
-      currentExamOwnerUid = data.ownerUid || data.teacherId || null;
+      currentExamOwnerUid = data.ownerUid || null;
       currentExamName = data.name || "";
 
       soalUjianAktif = normalizeSoalList(data.soalList || []);
@@ -999,7 +973,6 @@
     selesaiUjian();
   });
 
-  // simpan hasil ke Firestore
   async function simpanHasilKeFirestore(nama, kelas, persen, totalScore, maxScore, predikat, status) {
     try {
       if (!currentExamCodeForResult) return;
@@ -1062,7 +1035,6 @@
     hasilArea.classList.remove("hidden");
   }
 
-  // Download nilai siswa -> CSV: Nama, Kelas, Predikat, Score, Status
   const btnDownloadNilai = document.getElementById("btnDownloadNilai");
   btnDownloadNilai.addEventListener("click", () => {
     const rows = [
@@ -1116,7 +1088,6 @@
   filterNama.addEventListener("input", applyFilterNilai);
   filterKelas.addEventListener("input", applyFilterNilai);
 
-  // dari CSV
   btnTampilkanDaftarSiswa.addEventListener("click", () => {
     const file = fileNilai.files && fileNilai.files[0];
     if (!file) {
@@ -1150,7 +1121,6 @@
     reader.readAsText(file);
   });
 
-  // download rekap CSV
   btnDownloadDaftarNilaiCSV.addEventListener("click", () => {
     if (dataNilai.length === 0) {
       alert("Belum ada data nilai.");
@@ -1169,7 +1139,6 @@
     a.click();
   });
 
-  // download PDF
   btnPrintDaftarNilaiPDF.addEventListener("click", () => {
     if (dataNilai.length === 0) {
       alert("Belum ada data nilai untuk dicetak.");
@@ -1178,7 +1147,6 @@
     window.print();
   });
 
-  // muat nilai otomatis dari Firestore (TANPA orderBy)
   btnMuatNilaiDariDB.addEventListener("click", async () => {
     const { code } = getExamSettings();
     const user = auth.currentUser;
@@ -1224,7 +1192,6 @@
     }
   });
 
-  /* ---- Init ---- */
   window.addEventListener("load", () => {
     loadExamSettingsFromStorage();
     loadHeaderSubtitleFromStorage();
